Add new notifications indicator
